Added link to Portfolio site

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
              <p class="card-text">
                Translate mockup to a responsive website using HTML and CSS!
              </p>
-             <div class="btn btn-outline-info btn-block btn-lg">
+             <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Build-a-Portfolio-Site.git">
                View Project
-             </div>
+             </a>
            </div>
            <div class="card-footer">
              <p>Submitted</p>
