Added link to Animal Trading Cards

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
              <p class="card-text">
                Use HTML and CSS to convert a design prototype into a functional webpage!
              </p>
-             <div class="btn btn-outline-info btn-block btn-lg">
+             <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Animal-Trading-Cards.git">
                View Project
-             </div>
+             </a>
            </div>
            <div class="card-footer">
              <p>Submitted</p>
