Added link to mockup-to-article

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
              <p class="card-text">
                Write HTML syntax by converting a mockup of blog article into a real website!
              </p>
-             <a href="#" class="btn btn-outline-info btn-block btn-lg">View project</a>
+             <a href="https://github.com/saketpareek/mockup-to-article.git" class="btn btn-outline-info btn-block btn-lg">
+               View project
+             </a>
            </div>
            <div class="card-footer">
              <p class="text-muted">Submitted</p>
