Added github icons to project links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                Write HTML syntax by converting a mockup of blog article into a real website!
              </p>
              <a href="https://github.com/saketpareek/mockup-to-article.git" class="btn btn-outline-info btn-block btn-lg">
-               View project
+               <i class="fa fa-github fa-lg"></i> View project
              </a>
            </div>
            <div class="card-footer">
@@ -144,7 +144,7 @@
                Use HTML and CSS to convert a design prototype into a functional webpage!
              </p>
              <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Animal-Trading-Cards.git">
-               View Project
+               <i class="fa fa-github fa-lg"></i> View Project
              </a>
            </div>
            <div class="card-footer">
@@ -167,7 +167,7 @@
                Translate mockup to a responsive website using HTML and CSS!
              </p>
              <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Build-a-Portfolio-Site.git">
-               View Project
+               <i class="fa fa-github fa-lg"></i> View Project
              </a>
            </div>
            <div class="card-footer">
