Corrected cards image path

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
            <div class="card-header text-center">
              <h3>Project 1</h3>
            </div>
-           <img src="/img/card-img-1.jpg" class="card-img-top" height="300" width="450" alt="computer image">
+           <img src="img/card-img-1.jpg" class="card-img-top" height="300" width="450" alt="computer image">
            <div class="card-body">
              <h4 class="card-title">
                Mockup to Article
@@ -135,7 +135,7 @@
            <div class="card-header text-center">
              <h3>Project 2</h3>
            </div>
-           <img src="/img/card-img-2.jpg" class="card-img-top" height="300" width="450" alt="book image">
+           <img src="img/card-img-2.jpg" class="card-img-top" height="300" width="450" alt="book image">
            <div class="card-body">
              <h4 class="card-title">
                Animal Trading Cards
@@ -158,7 +158,7 @@
            <div class="card-header text-center">
              <h3>Project 3</h3>
            </div>
-           <img src="/img/card-img-3.jpg" class="card-img-top" height="300" width="450" alt="laptop image">
+           <img src="img/card-img-3.jpg" class="card-img-top" height="300" width="450" alt="laptop image">
            <div class="card-body">
              <h4 class="card-title">
                Portfolio Site
