--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row pb-5">
         <div class="col text-center">
-          <h1 class="display-3 pb-4">About</h1>
+          <h1 class="display-4 pb-4">About</h1>
           <p class="text-muted">Hi, I am Saket Pareek. I am a student of front-end web development. I have always liked designing process has always excited me and the idea of creating something from scratch is quite enticing. Though I am a software engineer but this is the first time I am actually coding. Before this, I was working as a test engineer in a mobile browser company. I have an idea of few of the web development technologies as mentioned below. These helps a lot especially bootstrap in making a project seem easier. This is my first portfolio. I hope you like it. Thank you!</p>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <div class="col text-center">
           <div class="row pb-5">
             <div class="col text-center">
-              <h1 class="display-3 pb-4">Featured Work</h1>
+              <h1 class="display-4 pb-4">Featured Work</h1>
               <p class="text-muted">Some of the projects completed using the knowledge of HTML, CSS, Bootstrap and basic javaScript.</p>
             </div>
           </div>
@@ -110,14 +110,14 @@
          <div class="col-lg-4">
           <div class="card">
            <div class="card-header text-center">
-             <h3>Project 1</h3>
+             <h4>Project 1</h4>
            </div>
            <img src="img/card-img-1.jpg" class="card-img-top" height="300" width="450" alt="computer image">
            <div class="card-body">
-             <h4 class="card-title">
+             <h5 class="card-title">
                Mockup to Article
-             </h4>
-             <p class="card-text">
+             </h5>
+             <p class="card-text text-muted">
                Write HTML syntax by converting a mockup of blog article into a real website!
              </p>
              <a href="https://github.com/saketpareek/mockup-to-article.git" class="btn btn-outline-info btn-block btn-lg">
@@ -133,14 +133,14 @@
        <div class="col-lg-4">
          <div class="card">
            <div class="card-header text-center">
-             <h3>Project 2</h3>
+             <h4>Project 2</h4>
            </div>
            <img src="img/card-img-2.jpg" class="card-img-top" height="300" width="450" alt="book image">
            <div class="card-body">
-             <h4 class="card-title">
+             <h5 class="card-title">
                Animal Trading Cards
-             </h4>
-             <p class="card-text">
+             </h5>
+             <p class="card-text text-muted">
                Use HTML and CSS to convert a design prototype into a functional webpage!
              </p>
              <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Animal-Trading-Cards.git">
@@ -156,14 +156,14 @@
        <div class="col-lg-4">
          <div class="card">
            <div class="card-header text-center">
-             <h3>Project 3</h3>
+             <h4>Project 3</h4>
            </div>
            <img src="img/card-img-3.jpg" class="card-img-top" height="300" width="450" alt="laptop image">
            <div class="card-body">
-             <h4 class="card-title">
+             <h5 class="card-title">
                Portfolio Site
-             </h4>
-             <p class="card-text">
+             </h5>
+             <p class="card-text text-muted">
                Translate mockup to a responsive website using HTML and CSS!
              </p>
              <a class="btn btn-outline-info btn-block btn-lg" href="https://github.com/saketpareek/Build-a-Portfolio-Site.git">
@@ -186,8 +186,8 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h5>Copyright &copy; 2018 Saket Pareek</h5>
-            <a href="https://www.facebook.com/saket.coding.7" class="btn btn-lg btn-info mt-3">Contact</a>
+            <h6>Copyright &copy; 2018 Saket Pareek</h6>
+            <a href="https://www.facebook.com/saket.coding.7" class="btn btn-info mt-3">Contact</a>
           </div>
         </div>
       </div>
